--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@prisma/client": "^3.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "prisma": "^3.14.0"
